@@ -1,3 +1,4 @@
+1.1.12-0 @01/30/2007 22:30:00 UTC@
 1.1.11-0 @12/13/2006 16:30:00 UTC@
 1.1.10-0 @11/13/2006 16:40:00 UTC@
 1.1.9-0 @10/01/2006 21:50:00 UTC@
