@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jan-30-2007 patrick     Eliminated the need to set JCCL_BASE_DIR on Windows to
+                        run applications.
+                        NEW VERSION: 1.1.12
 Dec-13-2006 aronb       Added jccl::ConfigManager::shutdown().
                         NEW VERSION: 1.1.11
 Nov-13-2006 patrick     Replaced vpr::ReturnStatus usage with bool in the
